@@ -1,3 +1,4 @@
+2022-04-02: new firmware: HW calibration signal output via T2OUT pin (HW change) [ecd6302]
 2022-03-21: Fix #15 - install Linux files only when building under Linux [be76527]
 2022-03-14: More refactoring [5d434c2]
 2022-03-14: Code cleanup / refactor [f4c52e1]
